# ethereum-historical-society

./: CHAT_CHANGES_AUDIT.md  FEATURES.md  MERGE_ANALYSIS.md  MERGE_VERIFICATION.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
assets/: index-3GpPS3SQ.css  index-3cAw59ml.js  index-9FmlfF5L.css  index-B0B3yKdk.css  index-B0uOySgV.js  index-B2POt1r9.js  index-B4BhS_h_.js  index-B4d2XSZc.js  index-B50g96XF.js  index-B5MrJGLZ.js  index-B5iskvk7.js  index-B8WBVBHn.css  index-B8ueDXr1.js  index-B9QhFrSa.js  index-B9_xinZo.js  index-B9wTRYTo.js  index-BGjJjINV.js  index-BIeUbKQ3.css  index-BIsBAExQ.js  index-BLAxhit3.css  index-BM6XvMgR.css  index-BRMAdRyz.js  index-BRZYBXhC.css  index-BSNDM5As.js  index-BWlmrCwU.css  index-BcG5j4Rj.js  index-BcjFodXQ.js  index-BdHL-Vyu.js  index-Be6cOtoo.css  index-BgdIwEdO.js  index-BmbN_VgG.js  index-BnbElwPT.css  index-Bp_kfy0S.css  index-BrJsLUB8.js  index-BsHBzyUW.js  index-BuaQRuNn.js  index-C-8MLYPL.css  index-C2cohJmS.js  index-C5Sms4Ws.js  index-C6a__5Ht.js  (+80 more)
backend/: Cargo.toml
backend/src/: block_time.rs  cache.rs  main.rs  models.rs
backend/src/sources/: ethresearch.rs  github.rs  live_blocks.rs  mod.rs
docs/brainstorms/: 2026-03-03-3d-eth-logo-background.md  2026-03-03-l2-timelines.md
docs/plans/: 2026-03-03-3d-eth-logo-background.md  2026-03-03-l2-timelines-UPDATED.md  2026-03-03-l2-timelines.md
scripts/: README.md  block-utils.ts  fetch-context-data.ts  fetch-eips.ts  fetch-og-images.ts  types.ts
src/: App.tsx  index.css
(+37 files in other folders)
